task_2/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    name: front

spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: docker.io/kayne787/task_2_front:latest
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 3000
status: {}
