task_2/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    name: web

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: docker.io/kayne787/task_1:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 5010
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 6
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 5010
status: {}
