task_2/front-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    run: front
spec:
  selector:
    app: front
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: NodePort
